kustomizations/recommendations/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendations
  namespace: journal
spec:
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: recommendations
        image: elifesciences/recommendations:latest
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "50Mi"
            cpu: "20m"
          limits:
            memory: "50Mi"
        readinessProbe:
          tcpSocket:
            port: 9000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 10
        volumeMounts:
        - name: config-volume
          mountPath: /srv/recommendations/config.php
          subPath: config.php
        - name: logs
          mountPath: /srv/recommendations/var/logs
      - name: logs
        image: cr.fluentbit.io/fluent/fluent-bit
        command:
        - "/fluent-bit/bin/fluent-bit"
        - "--parser=/config/json-parser.conf"
        - "--input=tail"
        - "--prop=path=/srv/recommendations/var/logs/all.json"
        - "--prop=parser=recommendations"
        - "--output=stdout"
        - "--prop=format=json_lines"
        volumeMounts:
        - name: logs
          mountPath: /srv/recommendations/var/logs
        - name: log-config-volume
          mountPath: /config/json-parser.conf
          subPath: json-parser.conf
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 10
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx-site.conf
      volumes:
      - name: logs
        emptyDir: {}
      - name: config-volume
        configMap:
          name: recommendations-config
          items:
          - key: config.php
            path: config.php
      - name: log-config-volume
        configMap:
          name: recommendations-config
          items:
          - key: json-parser.conf
            path: json-parser.conf
      - name: nginx-config-volume
        configMap:
          name: nginx-recommendations-site-conf
          items:
          - key: nginx-site.conf
            path: nginx-site.conf
