kustomizations/recommendations/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: recommendations-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
