kustomizations/recommendations/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommedations
  annotations:
    cert-manager.io/cluster-issuer: "${cert_manager_issuer}"
spec:
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: recommendations-web
            port:
              number: 80
  tls:
  - hosts:
    - ${hostname}
    secretName: recommedations-tls
